force-app/main/default/objects/Case_Sales_Order_Junction__c/Case_Sales_Order_Junction__c.object-meta.xml
<CustomObject>
    <label>Case-Sales Order Junction</label>
    <nameField>
        <displayFormat>csoj-{000000}</displayFormat>
        <label>Case-Sales Order Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case-Sales Order Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>