force-app/main/default/objects/Case_Sales_Order_Junction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Field Used in the creation of the linkage between the Case &amp; Sales Orders</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Affected Sales Orders</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>