force-app/main/default/objects/Case_Sales_Order_Junction__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>The Mode of this Sales Order</description>
    <formula>TEXT( Sales_Order__r.Mode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode</label>
    <type>Text</type>
</CustomField>