force-app/main/default/objects/Case_Sales_Order_Junction__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>